Fixes Java 11 warnings